# Road_detection_based_on_lidar

./: README.md
road_detection/: CMakeLists.txt  package.xml
road_detection/launch/: analyze_while_expand.launch  analyze_while_expand_paper.launch  kitti_road_detection_by_lidar.launch  kitti_road_detection_by_lidar_crf.launch  kitti_road_detection_by_lidar_paper.launch  time_test.launch  transform_kitti_points2_2_left_camera_for_obstacle_and_ground_detection.launch
road_detection/launch/param/: velodyne_left_camera_parameters.xml
road_detection/src/: analyze_while_expand.cpp  analyze_while_expand_paper.cpp  define.h  densecrf.cpp  densecrf.h  fastmath.h  kdtree_delaunay_ransac_time_test.cpp  kitti_road_detection_by_lidar.cpp  kitti_road_detection_by_lidar_crf.cpp  kitti_road_detection_by_lidar_paper.cpp  meanshiftfilter.cpp  opencv_GMM_CvEM_cluster.cpp  opencv_Kmeans_cluster.cpp  opencv_delaunay2.cpp  permutohedral.h  transform_kitti_points2_2_left_camera_for_obstacle_and_ground_detection.cpp  util.h  util_ppm.cpp  util_ppm.h
